--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=Vbvbrf33
-JIRA_API_TOKEN=NzM4MDMzMjkyMjA5OnUjGSamWtzkl9sa0VsAydHYPmCL
+DB_PASSWORD=
+JIRA_API_TOKEN=
